@@ -1,0 +1,3 @@
+Check package's files against recorded MD5 sums and timestamps
+Syntax:
+  size pkgspec
